feat(): changes in services view add li description and tittle

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
     <section class="hero">
       <div class="slogan-container">
-        <h1>Hydrating Skincare Products</h1>
+        <h1>Beauty & Skincare</h1>
         <a class="button" href="./views/contacto.html">Contacto</a>
       </div>
     </section>
@@ -61,12 +61,17 @@
       <div class="about-text">
         <h2>Sobre mí</h2>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ac
-          metus placerat, tempor magna in, scelerisque velit.
-        </p>
-        <p>
-          Mi misión es ayudarte a cuidar tu piel y bienestar con tratamientos
-          personalizados y atención profesional.
+          Mi nombre es Alexa. He concluido mi formación como esteticista y
+          actualmente continúo perfeccionando mis conocimientos para ofrecer un
+          servicio integral, especializado y de alta calidad. Mi compromiso es
+          brindar a cada cliente una atención personalizada, cuidando cada
+          detalle para garantizar bienestar, confianza y resultados visibles. En
+          este espacio podrás conocer los diferentes servicios que pongo a tu
+          disposición, todos pensados para resaltar tu belleza y armonizar tu
+          imagen. Será un honor atenderte y acompañarte en lo que constituye mi
+          verdadera vocación: la estética. Mi misión es ayudarte a cuidar tu
+          piel y bienestar con tratamientos personalizados y atención
+          profesional.
         </p>
       </div>
     </section>
