feat(): all changes

--- a/index.html
+++ b/index.html
@@ -137,9 +137,17 @@
         </div>
         <div>
           <div class="footer-links">
-            <i class="fa-brands fa-instagram"></i>
-            <i class="fa-brands fa-facebook"></i>
-            <i class="fa-brands fa-x-twitter"></i>
+            <a
+              href="https://www.instagram.com/zadum__oficial?igsh=dnh6Zm9vOGphc3Z3"
+              target="_blank"
+              ><i class="fa-brands fa-instagram"></i
+            ></a>
+            <a href="https://www.facebook.com" target="_blank"
+              ><i class="fa-brands fa-facebook"></i
+            ></a>
+            <a href="https://wa.me/+50671581462" target="_blank"
+              ><i class="fab fa-whatsapp"></i
+            ></a>
           </div>
           <p>© 2025 Zadum. Todos los derechos reservados.</p>
         </div>
